--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "naive-ui": "^2.38.2",
     "pinia": "^2.1.7",
     "unocss": "^0.61.9",
-    "vue": "^3.5.12"
+    "vue": "^3.5.12",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@types/node": "^22.7.4",
