--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@vueuse/core": "^11.1.0",
@@ -19,6 +21,7 @@
   "devDependencies": {
     "@types/node": "^22.7.4",
     "@vitejs/plugin-vue": "^5.1.4",
+    "gh-pages": "^6.3.0",
     "typescript": "^5.6.2",
     "vite": "^5.4.10",
     "vue-tsc": "^2.1.6"
